--- a/03_WebDev1/04_MidTermProject/assets/css/style.css
+++ b/03_WebDev1/04_MidTermProject/assets/css/style.css
@@ -127,9 +127,11 @@ main {
         background-color: rgb(75, 83, 84);
         display: block;
         width: 100%;
-        overflow-x: auto;
         overflow-y: hidden;
+        overflow-x: scroll;
         white-space: nowrap;
+        
+        
     }
         
     .sideNav li {
