Revert "[Add] WebDev1-401-exe first commit"
This reverts commit 3bd3364d99c1bf215643fd05b3b452a64de02acc.

--- a/03_WebDev1/04_MidTermProject/assets/css/style.css
+++ b/03_WebDev1/04_MidTermProject/assets/css/style.css
@@ -127,11 +127,9 @@ main {
         background-color: rgb(75, 83, 84);
         display: block;
         width: 100%;
+        overflow-x: auto;
         overflow-y: hidden;
-        overflow-x: scroll;
         white-space: nowrap;
-        
-        
     }
         
     .sideNav li {
